<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.dps.SecondActivity">

    <TextView
        android:id="@+id/goalLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downpayment_target"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/yearsLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="56dp"
        android:text="@string/years"
        android:layout_below="@+id/goalLabelTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/monthsLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/yearsLabelTV"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:layout_toEndOf="@+id/yearsLabelTV"
        android:layout_toRightOf="@+id/yearsLabelTV"
        android:text="@string/months" />

    <TextView
        android:id="@+id/amountLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/amount_to_save"
        android:layout_alignBaseline="@+id/monthsLabelTV"
        android:layout_alignBottom="@+id/monthsLabelTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/yearZeroTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/_1z"
        android:layout_below="@+id/yearsLabelTV"
        android:layout_alignLeft="@+id/yearsLabelTV"
        android:layout_alignStart="@+id/yearsLabelTV"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/monthsSixTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:layout_alignBaseline="@+id/yearZeroTV"
        android:layout_alignBottom="@+id/yearZeroTV"
        android:layout_alignLeft="@+id/monthsLabelTV"
        android:layout_alignStart="@+id/monthsLabelTV"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp" />

    <TextView
        android:id="@+id/sixMonthSaveTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/x3"
        android:layout_alignBaseline="@+id/monthsSixTV"
        android:layout_alignBottom="@+id/monthsSixTV"
        android:layout_alignRight="@+id/amountLabelTV"
        android:layout_alignEnd="@+id/amountLabelTV" />

    <TextView
        android:id="@+id/yearOneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/_1"
        android:layout_below="@+id/yearZeroTV"
        android:layout_alignRight="@+id/yearZeroTV"
        android:layout_alignEnd="@+id/yearZeroTV" />

    <TextView
        android:id="@+id/monthsTwelveTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/yearOneTV"
        android:layout_alignBottom="@+id/yearOneTV"
        android:layout_alignEnd="@+id/monthsSixTV"
        android:layout_alignRight="@+id/monthsSixTV"
        android:text="@string/_12" />

    <TextView
        android:id="@+id/oneYearSaveTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x2"
        android:layout_alignBaseline="@+id/monthsTwelveTV"
        android:layout_alignBottom="@+id/monthsTwelveTV"
        android:layout_alignLeft="@+id/sixMonthSaveTV"
        android:layout_alignStart="@+id/sixMonthSaveTV" />

    <TextView
        android:id="@+id/yearTwoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/_2"
        android:layout_below="@+id/yearOneTV"
        android:layout_alignLeft="@+id/yearOneTV"
        android:layout_alignStart="@+id/yearOneTV" />

    <TextView
        android:id="@+id/months24TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_24"
        android:layout_alignBaseline="@+id/yearTwoTV"
        android:layout_alignBottom="@+id/yearTwoTV"
        android:layout_alignLeft="@+id/monthsTwelveTV"
        android:layout_alignStart="@+id/monthsTwelveTV" />

    <TextView
        android:id="@+id/yearTwoSaveTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:layout_alignBaseline="@+id/months24TV"
        android:layout_alignBottom="@+id/months24TV"
        android:layout_alignLeft="@+id/oneYearSaveTV"
        android:layout_alignStart="@+id/oneYearSaveTV" />

    <Button
        android:id="@+id/longTermButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:onClick="longTermSaving"
        android:text="@string/long_term_saving" />

    <Button
        android:id="@+id/mediumTermButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/longTermButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:onClick="mediumTermSaving"
        android:text="@string/medium_term_saving" />

    <Button
        android:id="@+id/shortTermSaving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mediumTermButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:onClick="shortTermSaving"
        android:text="@string/short_term_saving" />

</RelativeLayout>
